# nanocube

./: .gitattributes  .gitignore  LICENSE  README.md  backlog.md  benchmark.ipynb  benchmark.py  benchmark_ext.py  changelog.md  mkdocs.yml  pyproject.toml  requirements.txt  sample.py  setup.py
.github/workflows/: pypi-upload.yml  python-package.yml
benchmarks/: benchmark.ipynb  benchmark.py  benchmark_all.py  benchmark_pandas.py  memory.py  nano_only.py  nano_vs_arrow.py  nano_vs_duckdb.py  nano_vs_nano_cached.py  nano_vs_others.py  nano_vs_polars.py  nano_vs_sqlite.py
benchmarks/files/: df.parquet  nanocube.parquet
docs/: best-practises.md  faq.md  getting-started.md  index.md  installation.md  readme_mkdocs.md  use-cases.md
docs/about/: contributing.md  license.md  release-notes.md  thomas.md
docs/api/: class-context.md  class-cube.md  class-dimension.md  class-measure.md  class-schema.md  method-cubed.md
docs/blog/: .authors.yml
docs/guides/: best-practise-aggregations.md  best-practise-datetime.md
docs/stylesheets/: extra.css
nanocube/: __init__.py  ambiguities.py  cube.py  cube2.py  nano_index.py  schema.py  settings.py  statistics.py
nanocube/backends/: backend.py  backend_factory.py  nano_backend.py  pandas_backend.py
nanocube/common/: __init__.py  logging.py
nanocube/context/: __init__.py  boolean_operation_context.py  context.py  context_context.py  context_resolver.py  cube_context.py  datetime_resolver.py  dimension_context.py  enums.py  expression.py  filter_context.py  function_context.py  slice.py  (+3 more)
nanocube_old/: __init__.py  nano_cube.py
research/: index_generation.py  initializations.py  issue_007.py  nan_values.py  nano_vs_duckdb.py  nano_vs_polars.py  nano_vs_sqlite.py  serialize.py
samples/: sample.py
tests/: tests.py
(+73 files in other folders)
